--- a/.project/spec.yaml
+++ b/.project/spec.yaml
@@ -22,67 +22,32 @@ layout:
       storage: gitignore
 environment:
     base:
-        registry: nvcr.io
-        image: nvidia/ai-workbench/python-basic:1.0.8
-        build_timestamp: "20250729154429"
-        name: Python Basic
+        registry: ""
+        image: ""
+        build_timestamp: ""
+        name: ""
         supported_architectures: []
         cuda_version: ""
-        description: A Python Base with Jupyterlab
+        description: ""
         entrypoint_script: ""
-        labels:
-            - ubuntu
-            - python3
-            - jupyterlab
-        apps:
-            - name: jupyterlab
-              type: jupyterlab
-              class: webapp
-              start_command: jupyter lab --allow-root --port 8888 --ip 0.0.0.0 --no-browser --NotebookApp.base_url=\$PROXY_PREFIX --NotebookApp.default_url=/lab --NotebookApp.allow_origin='*'
-              health_check_command: '[ \$(echo url=\$(jupyter lab list | head -n 2 | tail -n 1 | cut -f1 -d'' '' | grep -v ''Currently'' | sed "s@/?@/lab?@g") | curl -o /dev/null -s -w ''%{http_code}'' --config -) == ''200'' ]'
-              stop_command: jupyter lab stop 8888
-              user_msg: ""
-              logfile_path: ""
-              timeout_seconds: 60
-              icon_url: ""
-              webapp_options:
-                autolaunch: true
-                port: "8888"
-                proxy:
-                    trim_prefix: false
-                url_command: jupyter lab list | head -n 2 | tail -n 1 | cut -f1 -d' ' | grep -v 'Currently'
-        programming_languages:
-            - python3
-        icon_url: https://workbench.download.nvidia.com/static/img/ai-workbench-icon-rectangle.jpg
-        image_version: 1.0.8
-        os: linux
-        os_distro: ubuntu
-        os_distro_release: "22.04"
-        schema_version: v2
+        labels: []
+        apps: []
+        programming_languages: []
+        icon_url: ""
+        image_version: ""
+        os: ""
+        os_distro: ""
+        os_distro_release: ""
+        schema_version: ""
         user_info:
             uid: ""
             gid: ""
             username: ""
-        package_managers:
-            - name: apt
-              binary_path: /usr/bin/apt
-              installed_packages:
-                - curl
-                - git
-                - git-lfs
-                - python3
-                - gcc
-                - python3-dev
-                - python3-pip
-                - vim
-            - name: pip
-              binary_path: /usr/bin/pip
-              installed_packages:
-                - jupyterlab==4.3.5
+        package_managers: []
         package_manager_environment:
             name: ""
             target: ""
-    compose_file_path: ""
+    compose_file_path: ./compose.yaml
 execution:
     apps: []
     resources:
@@ -95,3 +60,7 @@ execution:
           target: /project/
           description: Project directory
           options: rw
+        - type: volume
+          target: /nvwb-shared-volume/
+          description: ""
+          options: volumeName=nvwb-shared-volume
